Ingresos tienda por categoria

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -443,6 +443,7 @@
         "columna_precio3 = tienda3['Precio']\n",
         "columna_precio4 = tienda4['Precio']\n",
         "\n",
+        "#sumando las columnas de cada tienda\n",
         "ingreso_total = columna_precio.sum()\n",
         "ingreso_total2 = columna_precio2.sum()\n",
         "ingreso_total3 = columna_precio3.sum()\n",
@@ -458,18 +459,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a5ab4961-2287-49d9-ca98-d37750c38c7e"
+        "outputId": "d40c75ad-4b3e-4ddf-c383-50565ccc0e0b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "El ingreso total de la tienda 1 es: $1150880400.0\n",
-            "El ingreso total de la tienda 2 es: $1116343500.0\n",
-            "El ingreso total de la tienda 3 es: $1098019600.0\n",
-            "El ingreso total de la tienda 4 es: $1038375700.0\n"
+            "El ingreso total de la tienda 1 es: 1150880400.0\n",
+            "El ingreso total de la tienda 2 es: 1116343500.0\n",
+            "El ingreso total de la tienda 3 es: 1098019600.0\n",
+            "El ingreso total de la tienda 4 es: 1038375700.0\n"
           ]
         }
       ]
@@ -494,12 +495,94 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "#seleccionando la columna de precio\n",
+        "columna_precio = tienda['Precio']\n",
+        "columna_precio2 = tienda2['Precio']\n",
+        "columna_precio3 = tienda3['Precio']\n",
+        "columna_precio4 = tienda4['Precio']\n",
+        "\n",
+        "#sumando las columnas de cada tienda\n",
+        "ingreso_total = columna_precio.sum()\n",
+        "ingreso_total2 = columna_precio2.sum()\n",
+        "ingreso_total3 = columna_precio3.sum()\n",
+        "ingreso_total4 = columna_precio4.sum()\n",
+        "\n",
+        "#Seleccionando por tienda y categorias.\n",
+        "Vta_cat = tienda.groupby('Categoría del Producto')['Precio'].sum()\n",
+        "Vta_cat2 = tienda2.groupby('Categoría del Producto')['Precio'].sum()\n",
+        "Vta_cat3 = tienda3.groupby('Categoría del Producto')['Precio'].sum()\n",
+        "Vta_cat4 = tienda4.groupby('Categoría del Producto')['Precio'].sum()\n",
+        "\n",
+        "print(f\"Las ventas por categoría de la tienda 1 son:\\n{Vta_cat.to_string()}\")\n",
+        "print(\"---\")\n",
+        "print(f\"Las ventas por categoría de la tienda 2 son:\\n{Vta_cat2.to_string()}\")\n",
+        "print(\"---\")\n",
+        "print(f\"Las ventas por categoría de la tienda 3 son:\\n{Vta_cat3.to_string()}\")\n",
+        "print(\"---\")\n",
+        "print(f\"Las ventas por categoría de la tienda 4 son:\\n{Vta_cat4.to_string()}\")"
+      ],
       "metadata": {
-        "id": "A34YupIuYhfF"
+        "id": "A34YupIuYhfF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "973fea35-67ba-45fe-9a4c-88d016f4283e"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Las ventas por categoría de la tienda 1 son:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     12698400.0\n",
+            "Deportes y diversión        39290000.0\n",
+            "Electrodomésticos          363685200.0\n",
+            "Electrónicos               429493500.0\n",
+            "Instrumentos musicales      91299000.0\n",
+            "Juguetes                    17995700.0\n",
+            "Libros                       8784900.0\n",
+            "Muebles                    187633700.0\n",
+            "---\n",
+            "Las ventas por categoría de la tienda 2 son:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     14746900.0\n",
+            "Deportes y diversión        34744500.0\n",
+            "Electrodomésticos          348567800.0\n",
+            "Electrónicos               410831100.0\n",
+            "Instrumentos musicales     104990300.0\n",
+            "Juguetes                    15945400.0\n",
+            "Libros                      10091200.0\n",
+            "Muebles                    176426300.0\n",
+            "---\n",
+            "Las ventas por categoría de la tienda 3 son:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     15060000.0\n",
+            "Deportes y diversión        35593100.0\n",
+            "Electrodomésticos          329237900.0\n",
+            "Electrónicos               410775800.0\n",
+            "Instrumentos musicales      77380900.0\n",
+            "Juguetes                    19401100.0\n",
+            "Libros                       9498700.0\n",
+            "Muebles                    201072100.0\n",
+            "---\n",
+            "Las ventas por categoría de la tienda 4 son:\n",
+            "Categoría del Producto\n",
+            "Artículos para el hogar     15074500.0\n",
+            "Deportes y diversión        33350100.0\n",
+            "Electrodomésticos          283260200.0\n",
+            "Electrónicos               409476100.0\n",
+            "Instrumentos musicales      75102400.0\n",
+            "Juguetes                    20262200.0\n",
+            "Libros                       9321300.0\n",
+            "Muebles                    192528900.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
